test1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-pod
spec:
  replicas: 100
  selector:
    matchLabels:
      name: pod-label
  template:
    metadata:
      labels:
        name: pod-label
    spec:
      containers:
      - name: test-pod
        image: quay.io/openshifttest/hello-sdn@sha256:d5785550cf77b7932b090fcd1a2625472912fb3189d5973f177a5a2c347a1f95
        ports:
        - containerPort: 8080
        - containerPort: 443
