scoped-router.yaml
apiVersion: v1
kind: List
items:
# a scoped router
- apiVersion: v1
  kind: Pod
  metadata:
    name: scoped-router
    labels:
      test: scoped-router
  spec:
    containers:
    - name: router
      image: openshift/origin-haproxy-router
      args: ["--namespace=$(POD_NAMESPACE)", "--loglevel=4", "--labels=select=first"]
      hostNetwork: false
      ports:
      - containerPort: 8080
      - containerPort: 443
      - containerPort: 1936
        name: stats
        protocol: TCP
    serviceAccountName: default

# a router that overrides host
- apiVersion: v1
  kind: Pod
  metadata:
    name: router-override
    labels:
      test: router-override
  spec:
    containers:
    - name: router
      image: openshift/origin-haproxy-router
      args: ["--namespace=$(POD_NAMESPACE)", "--loglevel=4", "--override-hostname", "--hostname-template=${name}-${namespace}.myapps.mycompany.com"]
      hostNetwork: false
      ports:
      - containerPort: 8080
      - containerPort: 443
      - containerPort: 1936
        name: stats
        protocol: TCP
    serviceAccountName: default


# ensure the router can access routes and endpoints
- apiVersion: v1
  kind: RoleBinding
  metadata:
    name: system-router
  subjects:
  - kind: ServiceAccount
    name: default
  roleRef:
    name: system:router


# a service to be routed to
- apiVersion: v1
  kind: Service
  metadata:
    name: endpoints
    labels:
      test: router
  spec:
    selector:
      test: router
      endpoints: router
    ports:
    - port: 8080
      targetPort: 8080
# a pod that serves a response
- apiVersion: v1
  kind: Pod
  metadata:
    name: endpoint-1
    labels:
      test: router
      endpoints: router
  spec:
    containers:
    - name: test
      image: openshift/hello-openshift
      # image: openshift/deployment-example:v1
      ports:
      - containerPort: 8080
      - containerPort: 443
      - containerPort: 100
