test.yaml
---
kind: List
apiVersion: v1
metadata:
  name: hello-service-complete-example
items:
- kind: Service
  apiVersion: v1
  metadata:
    name: hello-service1
  spec:
    selector:
      name: hello-openshift
    ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
- kind: Pod
  apiVersion: v1
  metadata:
    name: network-pod-1
    labels:
      name: hello-openshift
  spec:
    containers:
    - name: network-pod-1
      image: bmeng/hello-openshift
      ports:
      - containerPort: 8080
      - containerPort: 443
      securityContext:
      capabilities:
        add: ["NET_ADMIN"]
    hostNetwork: true
- kind: Pod
  apiVersion: v1
  metadata:
    name: network-pod-2
    labels:
      name: hello-openshift
  spec:
    containers:
    - name: network-pod-2
      image: bmeng/hello-openshift
      ports:
      - containerPort: 8080
      - containerPort: 443
      securityContext:
      capabilities:
        add: ["NET_ADMIN"]
    hostNetwork: true
    serviceAccountName: tester
