test100.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: hello-pod
    name: hello-pod
  spec:
    tags:
    - annotations:
        openshift.io/imported-from: openshift/hello-openshift
      from:
        kind: DockerImage
        name: bmeng/hello-openshift
      generation: null
      importPolicy: {}
      name: latest
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: hello-pod
    name: hello-pod
  spec:
    replicas: 2
    selector:
      app: hello-pod
      deploymentconfig: hello-pod
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/container.hello-openshift.image.entrypoint: '["/hello-openshift"]'
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: hello-pod
          deploymentconfig: hello-pod
      spec:
        containers:
        - image: bmeng/hello-openshift
          name: hello-pod
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8888
            protocol: TCP
          resources: {}
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - hello-pod
        from:
          kind: ImageStreamTag
          name: hello-pod:latest
      type: ImageChange
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: hello-pod
    name: hello-pod
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8888-tcp
      port: 8888
      protocol: TCP
      targetPort: 8888
    selector:
      app: hello-pod
      deploymentconfig: hello-pod
    sessionAffinity: ClientIP
    type: NodePort

  status:
    loadBalancer: {}
kind: List
metadata: {}
