test9.yaml
---
kind: List
apiVersion: v1
metadata:
  name: hello-service-complete-example
items:
- kind: Service
  apiVersion: v1
  metadata:
    name: hello-service1
  spec:
    selector:
      name: hello-openshift
    ports:
    - protocol: TCP
      port: 27018
      targetPort: 8080
    externalIPs:
    - 10.0.1.5
- kind: Pod
  apiVersion: v1
  metadata:
    name: hello-pod-1
    labels:
      name: hello-openshift
  spec:
    containers:
    - name: hello-pod-container-1
      image: bmeng/hello-openshift
      ports:
      - containerPort: 8080
      - containerPort: 443
