test-route.yaml
kind: Route
apiVersion: v1
metadata: 
 name: "hello-route"
 labels: 
  name: "hello-route-1"
spec: 
 host: "hello-openshift.com"
 to: 
  kind: Service
  name: "hello-service"
