testing.yaml
apiVersion: v1
kind: List
items:

# a scoped router
- apiVersion: v1
  kind: Pod
  metadata:
    name: scoped-router
    labels:
      test: scoped-router
  spec:
    containers:
    - name: router
      image: openshift/origin-haproxy-router
      args: ["--namespace=$(POD_NAMESPACE)", "--loglevel=4", "--labels=select=first"]
      hostNetwork: false
      ports:
      - containerPort: 80
      - containerPort: 443
      - containerPort: 1936
        name: stats
        protocol: TCP
    serviceAccountName: default


# ensure the router can access routes and endpoints
- apiVersion: v1
  kind: RoleBinding
  metadata:
    name: system-router
  subjects:
  - kind: ServiceAccount
    name: default
  roleRef:
    name: system:router

# two routes that differ only by their labels and names
- apiVersion: v1
  kind: Route
  metadata:
    name: route-1
    labels:
      test: router
      select: first
  spec:
    host: hello-openshift.com
    to:
      name: endpoints
    ports:
    - targetPort: 8080
    tls:
      termination: edge
      certificate: "-----BEGIN CERTIFICATE-----nMIIDVDCCAjwCCQDDxczFLVd73TANBgkqhkiG9w0BAQUFADBsMQswCQYDVQQGEwJV\nUzELMAkGA1UECAwCQ0ExFjAUBgNVBAcMDU1vdW50YWluIFZpZXcxDDAKBgNVBAoM\nA09TMzEMMAoGA1UECwwDRW5nMRwwGgYDVQQDDBNoZWxsby1vcGVuc2hpZnQuY29t\nMB4XDTE2MDcwNTE4Mjc0NFoXDTE3MDcwNjE4Mjc0NFowbDELMAkGA1UEBhMCVVMx\nCzAJBgNVBAgMAkNBMRYwFAYDVQQHDA1Nb3VudGFpbiBWaWV3MQwwCgYDVQQKDANP\nUzMxDDAKBgNVBAsMA0VuZzEcMBoGA1UEAwwTaGVsbG8tb3BlbnNoaWZ0LmNvbTCC\nASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAK/7hfPJcDuV8bH/ [...]
      key: "-----BEGIN RSA PRIVATE KEY-----\nMIIEpAIBAAKCAQEAr/uF88lwO5Xxsf9vRgHf8/OjSDHu4z0wyjxve6UO0po/wAfu\nOIp3Ekpt/XqnAKRf/U95WA3WWysUESOdse8sb1KbLFnrDn6diqNlAuiF/rRggrSl\nbOgMntCsspSbYq081ut9KnhHOGkrqppiit4mMJmPppNrNBaPsbyDQGca52Z6XYd+\nZPfYxxxoNHqeRQAY7VLA7LGyKMgJxPZq+7IePF4J8+7qSizxu3CCE3qYGACwpov9\nwHH6Ktycv4h2892rdksdqZoVSA0lAc35bJgG8pSGw9j4wdwURyJBtGUbwvVoNSAb\n8Hhe1RWeFn9s6iuK9WFo1b3qzkd8q/mp1f6rJQIDAQABAoIBAQCm0grH72NJyLkF\n37rupSZTzdgxvsvSc5YFj8aqcewcLgZSlfH3fSKknxOm3pbi3+7yZF0F4JA [...]


# a service to be routed to
- apiVersion: v1
  kind: Service
  metadata:
    name: endpoints
    labels:
      test: router
  spec:
    selector:
      test: router
      endpoints: router
    ports:
    - port: 8080

# a pod that serves a response
- apiVersion: v1
  kind: Pod
  metadata:
    name: endpoint-1
    labels:
      test: router
      endpoints: router
  spec:
    containers:
    - name: test
      image: openshift/hello-openshift
      # image: openshift/deployment-example:v1
      ports:
      - containerPort: 8080
        name: http
      - containerPort: 100
        protocol: UDP
